# CompressionTool

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
code/: CMakeLists.txt  EncoderFacade.cpp  _Core.h  y_core.h
code/archive/: Archive.cpp  Archive.h  CMakeLists.txt
code/compression/: CMakeLists.txt  CompressionDevice.cpp  CompressionDevice.h  CompressorFacade.cpp  CompressorFacade.h  CompressorFactory.cpp  CompressorFactory.h  ICompressor.h
code/compression/huffman/: CMakeLists.txt  HuffmanCompressor.cpp  HuffmanCompressor.h
code/compression/lz77/: CMakeLists.txt  LZ77Compressor.cpp  LZ77Compressor.h
code/encode/: CMakeLists.txt  Encoders.cpp  Encoders.h  IEncoder.h
code/encode/compress/: CMakeLists.txt
code/encode/compress/huffman/: CMakeLists.txt  HuffmanCompressor.cpp  HuffmanCompressor.h  (+3 more)
code/encode/transform/: CMakeLists.txt
code/encoding/: CMakeLists.txt  EncoderFacade.cpp  EncoderFacade.h  Encoders.cpp  Encoders.h  IEncoder.h
code/helpers/: BufferedFileReader.cpp  BufferedFileReader.h  CMakeLists.txt  Files.cpp  Files.h  LargeFileOpener.h  Serializer.h  TemporaryFileWorkplace.h  TemporaryFileWorkspace.cpp  TemporaryFileWorkspace.h  ThreadPool.h  Thread_Pool.h
code/huffman/: CMakeLists.txt  Huffman_Compressor.cpp  Huffman_Compressor.h  x_Huffman_Node.cpp  x_Huffman_Node.h  x_Huffman_Tree.cpp  x_Huffman_Tree.h
code/transform/bwt/: BWTTransform.cpp  BWTTransform.h  CMakeLists.txt
code/transform/mtf/: CMakeLists.txt  MTFTransform.cpp  MTFTransform.h
configuration/: Config.hpp.in
obsolete/: o_Huffman_Compressor.h
(+16 files in other folders)
